# clipbench

./: .gitignore  MANIFEST.in  README.md  audit.py  input_file_editor.html  output.html  pyproject.toml  setup.cfg  setup.py  test.py
clipex/core/: executor.py
clipex/experiment/: experiment.py  line_definition.py  variable_collection.py
dev_tools/: build_install_wheel.py
doc/: cli-application.md  documentation.md  examples.md  input-file-editor.md  result-viewer.md  windows-troubleshooting.md
examples/: README.md  run_all_examples.py
examples/djikstra/: analysis.json  experiment.xml  result.csv
examples/dummy/: configuration.json  result.csv
examples/euclids_gcd/: analysis.json  configuration.json  experiment.xml  result.csv
examples/euclids_gcd_broken/: configuration.json
examples/example_batch_programs/: array_append.c  array_append_broken.c  djikstra.c  euclids_gcd.c  euclids_gcd_broken.c  game_of_life.c  gradient_descend.c  gradient_descend_broken.c  merge_sort.c  merge_sort_broken.c  root_finding.c  root_finding_broken.c  string_matching.c
examples/game_of_life/: analysis.json  experiment.xml  result.csv
examples/landscape1/: configuration.json  experiment.xml  result.csv
examples/local_extrema/: configuration.json  experiment.xml  result.csv
examples/maxima/: experiment.xml  result.csv
examples/min_2/: configuration.json  experiment.xml  result.csv
examples/path_test/: experiment.xml
examples/polynomial_sleep_1/: experiment.xml  result.csv
examples/polynomial_sleep_2/: experiment.xml
examples/polynomial_sleep_3/: experiment.xml
examples/sleep_1/: result.csv
examples/sleep_2/: result.csv
examples/sleep_3/: configuration.json  experiment.xml  result.csv
examples/string_matching/: analysis.json  experiment.xml  result.csv
src/clipbench/: README.md
src/clipbench/core/: executor.py  (+3 more)
src/input_file_editor/: README.md  editor_creator.py  input_file_editor.html.j2
src/result_viewer/: README.md  result_viewer.html
tests/examples/: maxima.ps1  polynomial_sleep.ps1
(+137 files in other folders)
