[metadata]
name = clipbench
version = 0.0.0
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
author = StefanVasak

[options]
packages = find:
package_dir =
    = src
install_requires =
    matplotlib>=3.5.0
    numpy>=1.20.0
    pexpect>=4.9.0

[options.data_files]
bin =
    bin/cmd_runner.exe
    bin/input_file_editor.html
    bin/result_viewer.html

[options.exclude_package_data]
clipbench.core.command_runner.c_runner =
    cmd_runner
    cmd_runner.exe

[options.packages.find]
where = src
include = clipbench*
exclude = dev_tools*

[options.entry_points]
console_scripts =
    clipbench = clipbench.ui.cli.cli:main

[options.extras_require]
dev =
    black>=22.0.0
    pytest>=7.0.0
packaging =
    build>=0.7.0
    packaging>=21.0
